--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <html>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
+<style>
+  p {
+    font-size: 50;
+    color: red;
+  }
+  #Task {
+    font-size: 70;
+    color: black;
+  }
+  canvas {
+    border: 2px solid black;
+  }
+</style>
+<body>
+  <p id="Task"></p>
+  <canvas id="can" width="400" height="400"></canvas>
+</body>
 <script src="AvoMatrix.js"></script>
 <script src="AvoNet.js"></script>
 <script src="Image.js"></script>
